tests: Re-enable JIT

Whatever long-standing JIT bug was causing the leak here, it has been
fixed in SpiderMonkey 52.

https://bugzilla.gnome.org/show_bug.cgi?id=616193